--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/plots": "^2.6.6",
     "@tailwindcss/vite": "^4.1.18",
     "antd": "^6.1.1",
     "axios": "^1.13.2",
+    "framer-motion": "^12.23.26",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
