--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,8 +19,12 @@
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
+    "mammoth": "^1.11.0",
     "mongoose": "^9.0.1",
     "multer": "^2.0.2",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "openai": "^6.15.0",
+    "pdf-parse": "^1.1.1",
+    "string-similarity": "^4.0.4"
   }
 }
