--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,5 +1,13 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; font-src 'self' https://jobapplicationtracker-1-lcwe.onrender.com; style-src 'self' 'unsafe-inline'; connect-src 'self' https://jobapplicationtracker-1-lcwe.onrender.com"
+        }
+      ]
+    }
   ]
 }
