--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://gnagariya:keBTu7JzF4mFsjbhbyugubdmndh@cluster0.1tp1t78.mongodb.net/JobApplicationTracker?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=heyThisisMysecretKey
-# MONGO_URI=mongodb://localhost:27017/JobApplicationTracker
+MONGO_URI=add your string
+JWT_SECRET=add your key
