--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,9 +1,1 @@
-# VITE_BACKEND_URL=http://localhost:5000
-VITE_BACKEND_URL=https://jobapplicationtracker-95ej.onrender.com
-
-
-# for backend
-# PORT=5000
-# MONGO_URI=mongodb+srv://gnagariya:keBTu7JzF4mFsjbhbyugubdmndh@cluster0.1tp1t78.mongodb.net/JobApplicationTracker?retryWrites=true&w=majority&appName=Cluster0
-# JWT_SECRET=heyThisisMysecretKey
-# # MONGO_URI=mongodb://localhost:27017/JobApplicationTracker
+VITE_BACKEND_URL=add your backend url
